--- a/21 - Application Design Patterns/style.css
+++ b/21 - Application Design Patterns/style.css
@@ -19,8 +19,8 @@
   }
   
   .results {
-    max-height: 500px;
-    overflow-y: scroll;
+    max-height: 800px;
+    overflow-y: auto;
   }
   
   .title .icon {
@@ -46,4 +46,6 @@
     height: 50px;
     margin-right: 10px;
   }
-  
+  .input{
+    display: block;
+  }
